--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.voicecontroltest"
+        applicationId "gpm.tnt_premier"
         minSdk 25
         targetSdk 35
         versionCode 1
