Added activity for testing buttons with changing state

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".BoxButtonsActivity" />
         <activity android:name=".BoxButtonsWithChangingTextActivity" />
         <activity android:name=".IconButtonsActivity" />
+        <activity android:name=".ButtonsWithChangingStateActivity" />
     </application>
 
 </manifest>
